--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<header class="major">
 									<span class="date">September 17, 2024</span>
 									<h2><a href="#">A Journey with<br />
-									Sawan Kumar</a></h2>
+									Sawan Kumar's </br> Key Projects and Contributions </a></h2>
 									
 									</header>
 								<a href="#" class="image main"><img src="images\sawan_lake.jpg" alt="" /></a>
