--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<a href="#" class="image fit"><img src="images\Chatbot.jpg" alt="" /></a>
 									<p>This Project showcase Email Generator Chatbot, which leverages Gemini-1.5 pro language model for generating email content. The project is integrated with Streamlit, making it easy for users to input their preferences and generate tailored email text. The Email Generator is a powerful tool that uses Large Language Models (LLMs) to craft customized email content based on user-defined subjects and tones. Whether you need a formal business email, a friendly message, or something with a touch of humor, this tool has you covered.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/sawanjr/email_chatbot" class="button">View Project</a></li>
+										<li><a href="https://emailchatbot-3whc2em9yzcdykfta6gxpa.streamlit.app/" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
